# climax

./: .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  README.md  flake.nix  smoke.sh
.tack/: default.nix  pins.lock.json  pins.toml
crates/bang-cli/: Cargo.toml
crates/bang-cli/src/: config.rs  lib.rs  main.rs
crates/bang-core/: Cargo.toml
crates/bang-core/src/: action.rs  event.rs  ids.rs  lib.rs  output.rs  render.rs  session.rs  value.rs  widget.rs
crates/bang-core/src/widgets/: date_picker.rs  form.rs  mod.rs  review_list.rs  search_select.rs  select.rs  text_input.rs
crates/bang-screw/: Cargo.toml
crates/bang-screw-pty/: Cargo.toml  README.md
crates/bang-screw-pty/src/: lib.rs
crates/bang-screw/src/: lib.rs
crates/bang-terminal/: Cargo.toml
crates/bang-terminal/src/: decoder.rs  lib.rs  mode.rs  runner.rs  screen.rs  signal.rs  size.rs
crates/climax/: Cargo.toml
crates/climax/examples/: prompt.rs  status.rs
crates/climax/src/: app.rs  error.rs  lib.rs  output.rs  prelude.rs  prompt.rs  status.rs
crates/pound/: Cargo.toml
crates/pound-derive/: Cargo.toml
crates/pound-derive/src/: attr.rs  lib.rs
crates/pound/examples/: grab.rs  introspect.rs  vault.rs
crates/pound/src/: error.rs  help.rs  lib.rs  parse.rs  spec.rs  value.rs
crates/pound/tests/: aliases.rs  cli.rs  derive.rs  raw.rs  subcommands.rs  ui.rs
crates/pound/tests/ui/: global_positional.rs  global_positional.stderr  parse_on_flag.rs  parse_on_flag.stderr  parse_with_bounds.stderr  tuple_struct.stderr  unknown_conflict.rs  unknown_conflict.stderr  value_enum_on_struct.stderr
crates/screw/: Cargo.toml  README.md
crates/screw-pty/: Cargo.toml  README.md
crates/screw-pty/src/: lib.rs
crates/screw/examples/: cade.rs  gallery.rs
crates/screw/src/: layout.rs  lib.rs  plain.rs  renderer.rs  runtime.rs  style.rs  surface.rs  template.rs  terminal.rs  widget.rs
docs/: climax-facade.md
pound/: Cargo.toml
pound-derive/: Cargo.toml
pound-derive/src/: attr.rs  lib.rs
pound/examples/: grab.rs  vault.rs
pound/src/: error.rs  help.rs  lib.rs  parse.rs  spec.rs  value.rs
pound/tests/: aliases.rs  cli.rs  derive.rs  env.rs  optional_value.rs  raw.rs  subcommands.rs
pound/tests/ui/: default_missing_bool.rs  default_missing_bool.stderr  default_missing_count.rs  default_missing_count.stderr  default_missing_positional.rs  default_missing_positional.stderr  default_missing_required.rs  default_missing_required.stderr  default_missing_vec.rs  default_missing_vec.stderr  parse_with_bounds.rs  tuple_struct.rs  value_enum_on_struct.rs
