[workspace]
members  = [ "pound", "pound-derive" ]
resolver = "3"

[workspace.package]
authors    = [ "atagen" ]
edition    = "2024"
license    = "EUPL-1.2"
repository = "https://github.com/manic-systems/pound"

[workspace.lints.clippy]
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

arbitrary_source_item_ordering = "allow"
else_if_without_else           = "allow"
exhaustive_enums               = "allow"
exhaustive_structs             = "allow"
implicit_return                = "allow"
min_ident_chars                = "allow"
missing_docs_in_private_items  = "allow"
missing_errors_doc             = "allow"
missing_inline_in_public_items = "allow"
mod_module_files               = "allow"
module_name_repetitions        = "allow"
option_if_let_else             = "allow"
question_mark_used             = "allow"
redundant_pub_crate            = "allow"
single_call_fn                 = "allow"
single_char_lifetime_names     = "allow"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = "s"
panic         = "abort"
strip         = true
