[package]
name                 = "pound"
version              = "0.1.2"
description          = "low footprint, derive-first CLI parser"
keywords             = [ "cli", "args", "argparse", "derive", "command-line" ]
categories           = [ "command-line-interface" ]
readme               = "../README.md"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default = [ "std", "help", "derive" ]
# `std` wires up the std-only conveniences: `parse()`/`try_parse()` (read argv),
# `Error::exit()` (print + process::exit), and the `PathBuf` value impl. turn it
# off (`default-features = false`) to build `#![no_std]` against `alloc`; drive
# the parser through `try_parse_from` and match `Error` yourself.
std = []
# `help` bakes doc-comment help text into the binary and enables the formatter.
# turn it off (`default-features = false`) for the leanest possible build.
help = [ "pound-derive?/help" ]
# `derive` brings in the #[derive(Parse)] / #[derive(ValueEnum)] macros.
derive = [ "dep:pound-derive" ]

[dependencies]
pound-derive = { version = "0.1.1", path = "../pound-derive", optional = true }

[dev-dependencies]
trybuild = "1"

[[example]]
name              = "grab"
required-features = [ "derive" ]

[lints]
workspace = true
