[package]
name                 = "bang"
version              = "0.0.1"
authors.workspace    = true
categories           = [ "command-line-interface" ]
description          = "cli for bang widgets"
edition.workspace    = true
keywords             = [ "cli", "input", "terminal", "widgets" ]
license.workspace    = true
readme               = "../../README.md"
repository.workspace = true

[dependencies]
bang-core     = { path = "../bang-core", version = "0.0.1" }
bang-screw    = { path = "../bang-screw", version = "0.0.1" }
bang-terminal = { path = "../bang-terminal", version = "0.0.1" }
pound         = { path = "../pound", version = "0.1.6" }
serde         = { version = "1", features = [ "derive" ] }
toml          = "0.8"

[dev-dependencies]
libc = "0.2"

[[bin]]
name = "bang"
path = "src/main.rs"

[lints]
workspace = true
