[package]
name        = "climax"
version     = "0.0.1"
edition     = "2024"
license     = "EUPL-1.2"
description = "batteries-included CLI crate tying together argument parsing, terminal rendering, and prompts"
repository  = "https://github.com/manic-systems/climax"
readme      = "../../README.md"
keywords    = [ "cli", "terminal", "prompts", "args", "tui" ]
categories  = [ "command-line-interface", "command-line-utilities" ]

[features]
default     = [ "derive", "interactive", "render", "json" ]
derive      = [ "parse", "pound/derive" ]
interactive = [ "dep:bang-core", "dep:bang-terminal", "dep:bang-screw", "render" ]
json        = [ "dep:serde_json" ]
parse       = [ "dep:pound" ]
pty-overlay = [ "parse", "interactive", "dep:bang-screw-pty" ]
render      = [ "dep:screw" ]

[dependencies]
bang-core = { path = "../bang-core", version = "0.0.1", optional = true }
bang-screw = { path = "../bang-screw", version = "0.0.1", optional = true }
bang-screw-pty = { path = "../bang-screw-pty", version = "0.0.1", optional = true }
bang-terminal = { path = "../bang-terminal", version = "0.0.1", optional = true }
pound = { path = "../pound", version = "0.1.6", optional = true, default-features = false, features = [
  "std",
  "help",
] }
screw = { path = "../screw", version = "0.0.1", optional = true }
serde_json = { version = "1", optional = true }

[lints.clippy]
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

arbitrary_source_item_ordering = "allow"
else_if_without_else           = "allow"
exhaustive_enums               = "allow"
exhaustive_structs             = "allow"
implicit_return                = "allow"
min_ident_chars                = "allow"
missing_docs_in_private_items  = "allow"
missing_errors_doc             = "allow"
missing_inline_in_public_items = "allow"
mod_module_files               = "allow"
module_name_repetitions        = "allow"
must_use_candidate             = "allow"
option_if_let_else             = "allow"
question_mark_used             = "allow"
redundant_pub_crate            = "allow"
single_call_fn                 = "allow"
single_char_lifetime_names     = "allow"
