[package]
name                 = "pound-derive"
version              = "0.1.6"
description          = "derive macros for pound"
keywords             = [ "cli", "args", "derive" ]
categories           = [ "command-line-interface" ]
readme               = "../../README.md"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
# forwarded from pound's `help` feature, see pound/Cargo.toml
help = [  ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
venial      = "0.6"

[lints]
workspace = true
