[package]
name                 = "pound"
version              = "0.1.6"
description          = "low footprint, derive-first CLI parser"
keywords             = [ "cli", "args", "argparse", "derive", "command-line" ]
categories           = [ "command-line-interface" ]
readme               = "../../README.md"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default = [ "std", "help", "derive" ]
std = [  ]
help = [ "pound-derive?/help" ]
derive = [ "dep:pound-derive" ]

[dependencies]
pound-derive = { version = "0.1.6", path = "../pound-derive", optional = true }

[[example]]
name              = "grab"
required-features = [ "derive" ]

[[example]]
name              = "vault"
required-features = [ "derive" ]

[[example]]
name              = "introspect"
required-features = [ "derive" ]

[lints]
workspace = true
