[package]
name        = "screw"
version     = "0.0.1"
edition     = "2024"
license     = "EUPL-1.2"
description = "differential terminal renderer"
repository  = "https://github.com/manic-systems/screw"
readme      = "README.md"
keywords    = [ "terminal", "cli", "tui", "renderer", "animation" ]
categories  = [ "command-line-interface", "command-line-utilities" ]

[dependencies]
libc          = "0.2"
unicode-width = "0.2.2"

[lints.clippy]
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"
